[package]
name = "symbios-ground"
version = "0.2.0"
edition = "2024"
authors = ["Janus"]
description = "An algorithmic terrain engine."
license = "MIT"
readme = "README.md"
repository = "https://github.com/TheJanusStream/symbios-ground"
keywords = ["terrain", "procedural", "generative", "simulation"]
categories = ["simulation", "game-development", "mathematics"]

[dependencies]
rand = "0.9.2"
rand_pcg = "0.9.0"
serde = { version = "1.0", features = ["derive", "rc"] }

[dev-dependencies]
serde_json = "1.0"
criterion = "0.8"

[[bench]]
name = "bench_main"
harness = false

[profile.bench]
debug = true
